examples/errores.ml
program {
  int x;
  bool b;
  x = 5 / 0;        // error: división por cero
  b = x + 1;        // error de tipos (int en bool)
}
